--- a/eurekaserver.properties
+++ b/eurekaserver.properties
@@ -2,4 +2,4 @@ server.port=8888
 eureka.instance.hostname=localhost
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
-eureka.client.service-url=http://${eureka.instance.hostname}:${server.port}/eureka
+eureka.client.serviceUrl.defaultZone=optional:http://${eureka.instance.hostname}:${server.port}/eureka
