--- a/loans.properties
+++ b/loans.properties
@@ -9,3 +9,4 @@ loans.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
 loans.activeBranches[0]=Mumbai
 loans.activeBranches[1]=London
 loans.activeBranches[2]=Washington
+eureka.client.serviceUrl.defaultZone=eurekaserver:http://eurekaserver:8761/eureka/
