updated the properties

--- a/loans.properties
+++ b/loans.properties
@@ -9,4 +9,4 @@ loans.mailDetails.subject=Your Loan Details from Eazy Bank Default Environment
 loans.activeBranches[0]=Mumbai
 loans.activeBranches[1]=London
 loans.activeBranches[2]=Washington
-eureka.client.serviceUrl.defaultZone=eurekaserver:http://eurekaserver:8761/eureka/
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
