added eureka configuration

--- a/cards-dev.properties
+++ b/cards-dev.properties
@@ -9,3 +9,4 @@ cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
 cards.activeBranches[0]=Chennai
 cards.activeBranches[1]=Berlin
 cards.activeBranches[2]=Indianapollis
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
