--- a/loans-dev.properties
+++ b/loans-dev.properties
@@ -9,3 +9,4 @@ loans.mailDetails.subject=Your Loan Details from Eazy Bank Dev Environment
 loans.activeBranches[0]=Chennai
 loans.activeBranches[1]=Berlin
 loans.activeBranches[2]=Indianapollis
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
