--- a/loans-prod.properties
+++ b/loans-prod.properties
@@ -9,3 +9,4 @@ loans.mailDetails.subject=Your Loan Details from Eazy Bank Production Environmen
 loans.activeBranches[0]=Hyderabad
 loans.activeBranches[1]=Paris
 loans.activeBranches[2]=NewYork
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
