--- a/accounts-dev.properties
+++ b/accounts-dev.properties
@@ -9,3 +9,4 @@ accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment
 accounts.activeBranches[0]=Chennai
 accounts.activeBranches[1]=Berlin
 accounts.activeBranches[2]=Indianapollis
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
