--- a/accounts-prod.properties
+++ b/accounts-prod.properties
@@ -9,3 +9,4 @@ accounts.mailDetails.subject=Your Account Details from Eazy Bank Production Envi
 accounts.activeBranches[0]=Hyderabad
 accounts.activeBranches[1]=Paris
 accounts.activeBranches[2]=NewYork
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
