--- a/cards-prod.properties
+++ b/cards-prod.properties
@@ -9,3 +9,4 @@ cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environmen
 cards.activeBranches[0]=Hyderabad
 cards.activeBranches[1]=Paris
 cards.activeBranches[2]=NewYork
+eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
