--- a/cards.properties
+++ b/cards.properties
@@ -9,4 +9,4 @@ cards.mailDetails.subject=Your Card Details from Eazy Bank Default Environment
 cards.activeBranches[0]=Mumbai
 cards.activeBranches[1]=London
 cards.activeBranches[2]=Washington
-eureka.client.serviceUrl.defaultZone=eurekaservice:http://eurekaservice:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
